Copy-paste should not spellcheck when continuous spellcheck is turned off https://bugs.webkit.org/show_bug.cgi?id=112464

Patch by Rouslan Solomakhin <rouslan@chromium.org> on 2013-03-20
Reviewed by Ryosuke Niwa.

.:

* Source/autotools/symbols.filter: Export WebCore::Editor::isContinuousSpellCheckingEnabled() and WebCore::Editor::toggleContinuousSpellChecking() for use by internals.

Source/WebCore:

Test: editing/spelling/spellcheck-paste-continuous-disabled.html

* WebCore.exp.in: Export WebCore::Editor::isContinuousSpellCheckingEnabled() and WebCore::Editor::toggleContinuousSpellChecking() for use by internals.
* WebCore.order: Export WebCore::Editor::isContinuousSpellCheckingEnabled() and WebCore::Editor::toggleContinuousSpellChecking() for use by internals.
* editing/Editor.cpp:
(WebCore::Editor::replaceSelectionWithFragment): Do not spellcheck if continuous spellcheck is turned off.
* testing/Internals.cpp:
(WebCore::Internals::resetToConsistentState): Leave continuous spellcheck turned on after a test.
(WebCore::Internals::setContinuousSpellCheckingEnabled): Let tests enable and disable continuous spellcheck.
(WebCore):
* testing/Internals.h: Let tests enable and disable continuous spellcheck.
(Internals):
* testing/Internals.idl: Let tests enable and disable continuous spellcheck.

Source/WebKit/win:

* WebKit.vcproj/WebKitExports.def.in: Export WebCore::Editor::isContinuousSpellCheckingEnabled() and WebCore::Editor::toggleContinuousSpellChecking() for use by internals.

LayoutTests:

* editing/spelling/spellcheck-paste-continuous-disabled-expected.txt: Added expected results for pasting when continuous spellcheck is turned off.
* editing/spelling/spellcheck-paste-continuous-disabled.html: Added a test for pasting with continuous spellcheck turned off.
* platform/mac-wk2/TestExpectations: Skip spellcheck-paste-continuous-disabled.html, because it is a slight modification of spellcheck-paste-disabled.html, which is also skipped in mac-wk2.

Canonical link: https://commits.webkit.org/131151@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146361 268f45cc-cd09-0410-ab3c-d52691b4dbfc